--- a/src/index.css
+++ b/src/index.css
@@ -99,3 +99,8 @@ body {
 }
 .typing-dot:nth-child(2) { animation-delay: 0.2s; }
 .typing-dot:nth-child(3) { animation-delay: 0.4s; }
+
+/* Mirror user camera for selfie view */
+.mirror {
+  transform: scaleX(-1);
+}
